[HomePage] fix gap

--- a/components/Page/HomePage/HPCard/styles.module.css
+++ b/components/Page/HomePage/HPCard/styles.module.css
@@ -20,6 +20,9 @@
     @media (min-width: 1024px) {
         padding: 64px;
     }
+    @media (min-width: 1280px) {
+        padding: 80px 64px;
+    }
 }
 
 .title {
