--- a/components/Page/HomePage/HPContent/styles.module.css
+++ b/components/Page/HomePage/HPContent/styles.module.css
@@ -20,8 +20,11 @@
     }
 
     @media (min-width: 1024px) {
-        padding: 40px 64px;
+        padding: 64px;
         justify-content: space-between;
+    }
+    @media (min-width: 1280px) {
+        padding: 80px 64px;
     }
 }
 
